# sonos-web-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
src/json/: mod.rs
src/models/: devices.rs  mod.rs  speaker.rs  track.rs
src/models/response/: volume.rs
src/results/: error.rs  meta.rs  mod.rs  track_info.rs
src/sonos/: device.rs  mod.rs
static/: gulpfile.js  index.html  package.json
static/src/fonts/open-sans/bold/: stylesheet.css
static/src/fonts/open-sans/bolditalic/: stylesheet.css
static/src/fonts/open-sans/extrabold/: stylesheet.css
static/src/fonts/open-sans/extrabolditalic/: stylesheet.css
static/src/fonts/open-sans/italic/: stylesheet.css
static/src/fonts/open-sans/light/: stylesheet.css
static/src/fonts/open-sans/lightitalic/: stylesheet.css
static/src/fonts/open-sans/regular/: stylesheet.css
static/src/fonts/open-sans/semibold/: stylesheet.css
static/src/fonts/open-sans/semibolditalic/: stylesheet.css
static/src/jade/: index.jade
static/src/js/: main.js
static/src/less/: main.less
static/src/less/include/: colors.less  dimensions.less
