[package]
name = "sonos-web"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0-alpha.6"
actix-rt = "1.0.0-alpha.6"
sonos = "0.1.3"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
env_logger = "0.7.1"