[package]
name = "sonos-web"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2018"

[dependencies]
actix-web = { version="2.0", features=["rustls"]}
actix-rt = "1.0"
sonos = {git = "https://github.com/w4/sonos.rs", branch = "master"}
regex = "1.3"
env_logger = "0.7"
serde = "1.0"
serde_json = "1.0"